<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_overview"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_overview" />
    <item
        android:id="@+id/nav_style"
        android:icon="@drawable/ic_nav_palette"
        android:title="@string/nav_style" />
    <item
        android:id="@+id/nav_arrange"
        android:icon="@drawable/ic_nav_grid"
        android:title="@string/nav_arrange" />
    <item
        android:id="@+id/nav_tutorial"
        android:icon="@drawable/ic_nav_book"
        android:title="@string/nav_tutorial" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_nav_about"
        android:title="@string/nav_about" />
</menu>
